cmake_minimum_required(VERSION 2.6.0)

cmake_policy(SET CMP0011 NEW)
if(("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows"))
	SET(App_Data $ENV{AppData} CACHE STRING AppData)
	message("==== Detected Win32 Appdata: ${App_Data} ====")
endif()

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/DHT_bootstrap.cmake)

if(("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows"))
  file(MAKE_DIRECTORY "${App_Data}/.tox")
  file(INSTALL DHTservers DESTINATION "${App_Data}/.tox")
elseif(("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin"))
  set(HOME "$ENV{HOME}")
  file(MAKE_DIRECTORY ${HOME}/Library/Application\ Support/.tox)
  file(INSTALL DHTservers DESTINATION ${HOME}/Library/Application\ Support/.tox)
elseif(("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux"))
    set(HOME "$ENV{HOME}")
    file(MAKE_DIRECTORY ${HOME}/.tox)
    file(INSTALL DHTservers DESTINATION ${HOME}/.tox)
	add_subdirectory(bootstrap_serverdaemon)
endif()
