load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

CIMPLE_FILES = [
    "//c-toxcore/toxav:cimple_files",
    "//c-toxcore/toxcore:cimple_files",
    "//c-toxcore/toxencryptsave:cimple_files",
]

sh_test(
    name = "cimple_test",
    size = "small",
    srcs = ["//hs-tokstyle/tools:check-cimple"],
    args = ["$(locations %s)" % f for f in CIMPLE_FILES],
    data = CIMPLE_FILES,
    tags = ["haskell"],
)

cc_library(
    name = "misc_tools",
    srcs = ["misc_tools.c"],
    hdrs = ["misc_tools.h"],
    visibility = ["//c-toxcore:__subpackages__"],
    deps = ["//c-toxcore/toxcore"],
)

cc_library(
    name = "trace",
    srcs = ["trace.cc"],
    visibility = ["//c-toxcore:__subpackages__"],
    alwayslink = True,
)

cc_binary(
    name = "DHT_test",
    srcs = ["DHT_test.c"],
    deps = [
        ":misc_tools",
        "//c-toxcore/toxcore",
    ],
)

cc_binary(
    name = "Messenger_test",
    srcs = ["Messenger_test.c"],
    deps = [
        ":misc_tools",
        "//c-toxcore/toxcore",
    ],
)

cc_binary(
    name = "random_testing",
    srcs = ["random_testing.cc"],
    deps = [
        ":misc_tools",
        "//c-toxcore/toxcore",
    ],
)

cc_binary(
    name = "afl_toxsave",
    srcs = ["afl_toxsave.c"],
    deps = [
        "//c-toxcore/toxcore",
    ],
)
